# moveref

./: .gitignore  Cargo.toml  README.md  crates.js  deny.toml  help.html  rust-toolchain.toml  rustfmt.toml  search-index.js  settings.html  source-files.js  src-files.js  workspace.json
.github/workflows/: ci.yaml
implementors/core/clone/: trait.Clone.js
implementors/core/cmp/: trait.Eq.js  trait.Ord.js  trait.PartialEq.js  trait.PartialOrd.js
implementors/core/fmt/: trait.Debug.js
implementors/core/hash/: trait.Hash.js
implementors/core/marker/: trait.Copy.js  trait.Freeze.js  trait.Send.js  trait.Sync.js  trait.Unpin.js
implementors/core/ops/deref/: trait.Deref.js  trait.DerefMut.js
implementors/moveref/deref_move/: trait.DerefMove.js
moveref/: all.html  enum.SlotStorageKind.html  index.html  macro.bind.html  macro.bind_slot!.html  macro.bind_slot.html  macro.expr.html  macro.expr_slot!.html  macro.expr_slot.html  sidebar-items.js  struct.MoveRef.html  struct.Slot.html  struct.SlotStorage.html  trait.DerefMove.html  trait.Emplace.html  trait.IntoMove.html
moveref/deref_move/: trait.DerefMove.html
moveref/emplace/: trait.Emplace.html
moveref/into_move/: trait.IntoMove.html
moveref/move_ref/: struct.MoveRef.html
moveref/new/: fn.by.html  fn.by_raw.html  fn.default.html  fn.mov.html  fn.of.html  index.html  sidebar-items.js  trait.CopyNew.html  trait.MoveNew.html  trait.New.html  trait.TryNew.html
moveref/slot/: struct.Slot.html
moveref/slot_storage/: enum.SlotStorageKind.html  struct.SlotStorage.html
search.desc/moveref/: moveref-desc-0-.js
src/: deref_move.rs  emplace.rs  into_move.rs  lib.rs  macros.rs  move_ref.rs  new.rs  slot.rs  slot_storage.rs
src/moveref/: deref_move.rs.html  emplace.rs.html  into_move.rs.html  lib.rs.html  macros.rs.html  move_ref.rs.html  new.rs.html  slot.rs.html  slot_storage.rs.html
trait.impl/core/clone/: trait.Clone.js
trait.impl/core/cmp/: trait.Eq.js  trait.Ord.js  trait.PartialEq.js  trait.PartialOrd.js
trait.impl/core/fmt/: trait.Debug.js
trait.impl/core/hash/: trait.Hash.js
trait.impl/core/marker/: trait.Freeze.js  trait.Send.js  trait.Sync.js  trait.Unpin.js
(+6 files in other folders)
