[package]
edition = "2021"
name = "moveref"
version = "0.0.2"
authors = ["silvanshade <silvanshade@users.noreply.github.com>"]
license = "Apache-2.0 WITH LLVM-exception"
repository = "https://github.com/silvanshade/moveref"
documentation = "https://silvanshade.github.io/moveref/moveref"
description = "Types and traits for C++ style placement initialization and move semantics"

[features]
alloc = []
std = ["alloc", "tracing/std"]
debug = ["tracing"]
default = ["std", "cxx"]
cxx = ["cxx/c++20"]
valgrind = []

[dependencies]
cxx = { version = "1.0", optional = true }
tracing = { version = "0.1", optional = true, features = ["attributes"] }
