[package]
edition = "2021"
name = "moveref"
version = "1.0.0"
authors = ["silvanshade <silvanshade@users.noreply.github.com>"]
license = "Apache-2.0 WITH LLVM-exception"
repository = "https://github.com/silvanshade/moveref"
documentation = "https://silvanshade.github.io/moveref/moveref"
description = "Types and traits for safe C++ style placement initialization and move semantics"
categories = ["compilers", "external-ffi-bindings", "memory-management", "no-std", "rust-patterns"]
keywords = ["C++", "allocation", "ffi", "memory", "references"]

[features]
alloc = []
std = ["alloc", "tracing/std"]
debug = ["tracing"]
default = ["std", "cxx"]
cxx = ["cxx/c++20"]
valgrind = []

[dependencies]
cxx = { version = "1.0", optional = true }
tracing = { version = "0.1", optional = true, features = ["attributes"] }

[dev-dependencies]
seahash = "4.1"
